force-app/main/default/objects/sfpegAction__mdt/sfpegAction__mdt.object-meta.xml
<CustomObject>
    <description>Description of actions available for the sfpeg ActionBar component</description>
    <label>sfpegAction</label>
    <pluralLabel>sfpegActions</pluralLabel>
</CustomObject>