force-app/main/default/objects/sfpegAction__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Documentation of the Action record purpose</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>