force-app/main/default/objects/sfpegAction__mdt/fields/DoEvaluation__c.field-meta.xml
<CustomField>
    <fullName>DoEvaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to trigger evaluation of combined conditions in hidden and disabled boolean parameters</description>
    <inlineHelpText>Flag to trigger evaluation of combined conditions in hidden and disabled boolean parameters</inlineHelpText>
    <label>Do Evaluation ?</label>
    <type>Checkbox</type>
</CustomField>