force-app/main/default/objects/sfpegAction__mdt/fields/NotificationChannels__c.field-meta.xml
<CustomField>
    <fullName>NotificationChannels__c</fullName>
    <description>JSON list of channel labels to let the action bar component subscribe to notifications and execute actions triggered from other components (e.g. refresh of parent component of action bar).</description>
    <inlineHelpText>JSON list of channel labels to let the action bar component subscribe to notifications and execute actions triggered from other components (e.g. refresh of parent component of action bar).</inlineHelpText>
    <label>Notification Channels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>