force-app/main/default/objects/sfpegAction__mdt/listViews/All_Actions.listView-meta.xml
<ListView>
    <fullName>All_Actions</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Scope__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Actions</label>
    <language>en_US</language>
</ListView>